--- a/vet-app/pom.xml
+++ b/vet-app/pom.xml
@@ -60,7 +60,10 @@
 			<version>${org.mapstruct.version}</version>
 		</dependency>
 		<!-- mapstruct -->
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
